# filescaner

./: .gitignore  CMakeLists.txt  filescaner.pro  mainwindow.cpp  mainwindow.h  mainwindow.ui  my_file.cpp  my_file.h  scanner.cpp  scanner.h
test/case2/: cluster2_75.txt
